--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node ./database/seed.js",
+    "build": "webpack -d --w",
+    "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
