--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
     "mongoose": "^5.9.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.23.0",
+    "webpack": "^2.7.0",
+    "webpack-cli": "^3.3.10"
   }
 }
