--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.5",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-fade-in": "^0.1.8",
+    "react-player": "^1.15.2",
+    "react-router-dom": "^5.1.2",
+    "react-typing-effect": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
