--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-fade-in": "^0.1.8",
+    "react-pdf": "^4.1.0",
     "react-player": "^1.15.2",
     "react-router-dom": "^5.1.2",
     "react-typing-effect": "^2.0.3"
