--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.5",
+    "nodemailer": "^6.4.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-fade-in": "^0.1.8",
